errory przy walidacji

--- a/src/main/resources/templates/category/form.html
+++ b/src/main/resources/templates/category/form.html
@@ -12,12 +12,13 @@
             </div>
         </div>
         <div class="divider"></div>
-        <div class="row">
+        <div class="row" th:classappend="${#fields.hasErrors('name') ? 'error' : ''}">
             <div class="col s12 l8">
                 <input type="text" th:field="*{name}" placeholder="Category Name"/>
+                <div class="error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" th:classappend="${#fields.hasErrors('colorCode') ? 'error' : ''}">
             <div class="col s12 l8">
                 <select th:field="*{colorCode}" class="cs-select cs-skin-border">
                     <option value="" disabled="disabled">Category Color</option>
@@ -26,6 +27,7 @@
                             th:value="${color.hexCode}"
                             th:style="|color:${color.hexCode}|"></option> <!-- |...| wymusza dodanie stylu do css -->
                 </select>
+                <div class="error-message" th:if="${#fields.hasErrors('colorCode')}" th:errors="*{colorCode}"></div>
             </div>
         </div>
         <div class="row">
